<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".choose_song">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/choose_song"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_margin="20dp"
        android:text="@string/here_user_select_songs_from_his_her_device_and_play_pause_step_forward_or_backward"
        android:textColor="#4052b5"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc"
        android:layout_margin="20dp"
        android:contentDescription="@string/play_back_button"
        android:src="@drawable/ic_action_play_back" />

    <ImageButton
        android:id="@+id/btn_step_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc"
        android:layout_margin="20dp"
        android:layout_toEndOf="@+id/btn_play"
        android:layout_toRightOf="@+id/btn_play"
        android:contentDescription="@string/play_button"
        android:src="@drawable/ic_action_play" />

    <ImageButton
        android:id="@+id/btn_step_backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc"
        android:layout_margin="20dp"
        android:layout_toEndOf="@+id/btn_step_forward"
        android:layout_toRightOf="@+id/btn_step_forward"
        android:contentDescription="@string/play_next"
        android:src="@drawable/ic_action_play_next" />

    <Button
        android:id="@+id/btn_back_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/back_home" />

</RelativeLayout>