<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#ffcf66"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/song_name"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/song_name"
        android:layout_toRightOf="@+id/song_name"
        android:text="@string/artist_name" />

    <ImageView
        android:id="@+id/im_play_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/row_layout_play"
        android:src="@drawable/ic_action_play" />
</RelativeLayout>

