<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Play_list">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/playlist"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_margin="20dp"
        android:text="@string/here_is_the_playlists_of_favourite_songs_or_most_played"
        android:textColor="#4052b5"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_back_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/back_home" />

    <ListView
        android:id="@+id/list_playlist"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/desc"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
</RelativeLayout>